# CypherChat

./: CMakeLists.txt  README.md
src/: chat_definitions.h  client.c  cypher_lib.c  cypher_lib.h  server.c  server.h  string.h
tests/: CMakeLists.txt
tests/src/: main_tests.c
utests/: CMakeLists.txt
utests/src/: test_cypher_lib.cpp
